2e version, travail en cours. Resize, zoom + pan fonctionnels.

--- a/src/scss/_configuration.scss
+++ b/src/scss/_configuration.scss
@@ -25,6 +25,10 @@ $liens-association-opacite: .8;
 
 /* COULEURS */
 
+/* contenu */
+$contenu-fond: #eee;
+$article-fond: #fefefe;
+
 /* objet SVG */
 $svg-couleur-fond: white;
 
