--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -1,15 +1,31 @@
 /* propriétés par défaut */
-
-html, body, main, section#graph, svg {
+html {
+  font-family: sans-serif;
+}
+h1 {
+  line-height: 2;
+}
+html, body, main {
   height: 100%;
   width: 100%;
 }
-/* objet SVG */
-section#graph{
+
+main {
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
-svg {
-  background: $svg-couleur-fond;
+
+#carte, #contenu {
+  width: 50%;
+}
+#carte {
+  overflow: hidden;
+}
+
+#contenu {
+  background-color: $contenu-fond;
+}
+article {
+  background: $article-fond;
+  margin: 2em;
+  padding: 1em 2em 1.5em;
 }
