--- a/src/scss/_links.scss
+++ b/src/scss/_links.scss
@@ -3,14 +3,27 @@ line {
   stroke-linecap: round;
   opacity: .1;
 }
-line.association {
-  stroke: $liens-couleurs-defaut;
-  stroke-linecap: round;
-  opacity: 1;
-}
 /* cycle d'assignement des couleurs */
 @for $i from 1 through $nombre-themes {
   line.theme_#{$i} {
     stroke: nth($couleurs-themes, $i)
   }
+}
+line.association {
+  stroke: $liens-couleurs-defaut;
+  stroke-linecap: round;
+  opacity: 1;
+}
+
+line.highlighted {
+    stroke: gold;
+    stroke-width: 2;
+}
+
+[data-highlighted='réseau'] line, [data-highlighted^="theme-"] line {
+  opacity: .2;
+}
+
+line.highlighted {
+  opacity: 1;
 }
