--- a/src/scss/_infobulle.scss
+++ b/src/scss/_infobulle.scss
@@ -1,5 +1,7 @@
 #infobulle {
   position: absolute;
-  left: 100px;
-  top: 100px;
+  background: white;
+  border: 1px solid black;
+  border-radius: 2px;
+  padding: .25em 1em;
 }
