V1 custom shapes + similar colors

--- a/src/scss/_configuration.scss
+++ b/src/scss/_configuration.scss
@@ -33,15 +33,15 @@ $article-fond: #fefefe;
 $svg-couleur-fond: white;
 
 /* thèmes */
-$couleurs-themes: mediumblue,
-                  deeppink,
-                  darkblue,
-                  blue,
-                  cadetblue,
-                  darkslategrey,
-                  firebrick,
-                  darkorange,
-                  crimson,
-                  navy,
-                  mediumslateblue,
-                  mediumseagreen;
+$couleurs-themes: #FF0000,
+                  #FF1500,
+                  #FF2B00,
+                  #FF4000,
+                  #FF5500,
+                  #FF6A00,
+                  #FF8000,
+                  #FF9500,
+                  #FFAA00,
+                  #FFBF00,
+                  #FFD500,
+                  #FFEA00;
